# xivtool

./: .gitignore  Cargo.toml  README.md  UNLICENSE
xiv/: Cargo.toml
xiv/src/: dat.rs  error.rs  ex.rs  index2.rs  lib.rs  packid.rs  sqpack.rs  structs.rs  tex.rs
xiv/tests/: read_test.rs
xivtool/: Cargo.toml
xivtool/src/: main.rs
