[package]
name = "xiv"
version = "0.1.0"
description = "Final Fantasy XIV asset loader"
license = "Unlicense"
edition = "2021"

[dependencies]
thiserror = "1.0.49"
lazy_static = "1.4.0"
once_cell = "1.18.0"
regex = "1.9.6"
byteorder = "1.4.3"
binrw = "0.12.0"
nohash-hasher = "0.2.0"
crc = "3.0.1"
flate2 = "1.0.27"
serde = { version = "1.0.188", features = ["derive"] }
